Complete README rewrite: Comprehensive documentation for dual build systems
New README structure based on actual code comments and current project state.

Sections included:
- Quick Overview (table with key info)
- Project Structure (file layout)
- How It Works (architecture diagrams and build flow)
- Getting Started (prerequisites, installation, build/run/test)
- Java Code Structure (detailed App.java explanation)
- C++ Code Structure (greetings.cpp and JNI concepts)
- Build Configuration (app/build.gradle and CMakeLists.txt)
- Testing (AppTest.java and test explanations)
- JNI Concepts (naming conventions, type mappings, JNIEnv functions)
- Output Explanation (what the program outputs and why)
- Alternative: CMake-Only Build (switching instructions)
- Common Tasks (quick command reference)
- Troubleshooting (solutions for common errors)
- Learning Resources (external documentation links)
- File Descriptions (what each file does)
- Learning Objectives (what you'll learn from this project)
- Author and Technology Stack

All content derived from:
- app/build.gradle comments
- CMakeLists.txt comments
- App.java JavaDoc
- greetings.cpp and greetings_cmake.cpp implementation comments
- AppTest.java test documentation
- Actual project behavior and output

Features:
✓ Code examples from actual project files
✓ Detailed explanations of JNI concepts
✓ Visual diagrams (ASCII art)
✓ Command reference for all common tasks
✓ Troubleshooting guide
✓ Type mapping tables
✓ Project structure visualization